# Appllied

./: .gitignore  OCR_PDF_GUIDE.md  README.md  benchmark_extraction.py  benchmark_simple.py  extracted_text.txt  full_parallel.txt  no_corr.txt  pyproject.toml  seq.txt  test_parallel.txt
docs/: SCRIPTS_SUMMARY.md  performance.md
ocr_system/: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  container.py  pyproject.toml  requirements.txt
ocr_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ocr_system/application/: __init__.py  dtos.py  ports.py  services.py  use_cases.py
ocr_system/docs/: PENCILKIT_VISION_FIX.md  QUICKSTART.md
ocr_system/domain/: __init__.py  entities.py  enums.py  events.py  value_objects.py
ocr_system/examples/: basic_usage.py
ocr_system/infrastructure/: __init__.py  constants.py  custom_model.py  entity_extraction.py  repositories.py  sources.py  vision.py
ocr_system/scripts/: extract_text.py  extract_text_from_pdf.py  generate_text_images.py  image_utils.py  pdf_renderer.py  test_e2e.sh  vision_ocr.py
ocr_system/tests/: test_domain.py
test/: COVID-19_ScholarshipForm.txt  Русския_сказки_для_детей_разсказанныя_нянюшкою_Авдотьею_Степановною.txt
